@@ -612,3 +612,7 @@ verilog/parser_sv.v:275: ENDMODULE  'endmodule'
 verilog/parser_sv.v:277: MODULE  'module' 'bugas' undef '0'
 verilog/parser_sv.v:281: ENDMODULE  'endmodule'
 verilog/parser_sv.v:283: VAR  'typedef' 'enum_ranged_t' 'netlist' '' '[2:0]' '' ''
+verilog/parser_sv.v:285: VAR  'member' 'val' 'struct' '' 'logic' '' ''
+verilog/parser_sv.v:285: VAR  'typedef' 't_bug202_struct' 'netlist' '' 'struct' '' ''
+verilog/parser_sv.v:286: VAR  'member' 'val' 'union' '' 'logic' '' ''
+verilog/parser_sv.v:286: VAR  'typedef' 't_bug202_union' 'netlist' '' 'union' '' ''
