@@ -281,3 +281,6 @@ module bugas;
 endmodule
 
 typedef enum [2:0] { ENUM_RANGED_VALUE } enum_ranged_t;
+
+typedef struct packed { logic val; } t_bug202_struct;
+typedef union packed { logic val; } t_bug202_union;
